--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site settings
 title: Ziggit's Notes
-#email: ziggit
+email: ziggit@starhawking.com
 description: > # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://starhawking.github.io" # the base hostname & protocol for your site
